--- a/my-adblocker/popup/popup.html
+++ b/my-adblocker/popup/popup.html
@@ -23,6 +23,14 @@
       </section>
 
       <section class="card">
+        <label class="toggle-row" for="surrogate-toggle">
+          <span class="label-text">Surrogate Fixes</span>
+          <input id="surrogate-toggle" type="checkbox" />
+        </label>
+        <p class="hint">Kill switch for scoped 4000-series redirect surrogates.</p>
+      </section>
+
+      <section class="card">
         <p class="section-title">Current Site</p>
         <p id="current-domain" class="domain">Unavailable on this page</p>
         <button id="whitelist-toggle" class="button secondary" type="button">
