--- a/my-adblocker/popup/popup.html
+++ b/my-adblocker/popup/popup.html
@@ -60,6 +60,7 @@
       <section class="card actions">
         <button id="quick-pause" class="button warning" type="button">Quick Pause (30s)</button>
         <p id="pause-status" class="hint">Temporarily disable blocking for troubleshooting.</p>
+        <button id="rollback-features" class="button danger" type="button">Emergency Rollback</button>
         <button id="report-issue" class="button" type="button">Report Site Issue</button>
       </section>
     </main>
